# fastapi-test

./: .dockerignore  pyproject.toml  requirements.txt
