[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Michał Pawelski <kontakt@proapi.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
